# slambook

./: .gitignore
ch10/ceres_custombundle/: ceresBundle.cpp
ch10/ceres_custombundle/common/: BALProblem.cpp  BundleParams.h
ch10/g2o_custombundle/: g2o_bal_class.h  g2o_bundle.cpp
ch10/g2o_custombundle/common/: BALProblem.cpp
ch12/: feature_training.cpp  loop_closure.cpp
ch13/dense_RGBD/: pointcloud_mapping.cpp
ch13/dense_monocular/: CMakeLists.txt  dense_mapping.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/imageBasics/: imageBasics.cpp
ch5/joinMap/: joinMap
ch6/g2o_curve_fitting/: main.cpp
ch7/: pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/LKFlow/: useLK.cpp
ch8/directMethod/: direct_sparse.cpp
project/0.2/: CMakeLists.txt
project/0.2/config/: default.yaml
project/0.2/src/: visual_odometry.cpp
project/0.2/test/: CMakeLists.txt
